# devto-mirror

./: .bandit.yaml  .editorconfig  .env.example  .firebaserc  .flake8  .gitignore  .pre-commit-config.yaml  .radon.cfg  .secrets.baseline  AGENTS.md  BANNER_IMG_IMPLEMENTATION.md  CHANGELOG.md  CNAME  IMPLEMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_ANALYSIS.md  algolia_verification.html  comments.txt  dev-requirements.txt  firebase.json  index.html  last_run.txt  lefthook.yml  llms.txt  mirror.md  posts_data.json  posts_data_new.json  pyproject.toml  release-please-config.json  requirements.txt  robots.txt  sitemap.xml  test_incremental.py  test_posts_data.json  test_with_mock_rss.py  ttd.tmp
.github/: CODEOWNERS  README.md  copilot-instructions.md  dependabot.yml
assets/: llms.txt  robots.txt
comments/: 2pafg.html  2pagb.html  2phao.html  2pn3p.html  30028.html  300n8.html  306a2.html  307pn.html  309oh.html  30bgl.html  30d9l.html  31l5m.html
devto_mirror/: __init__.py
devto_mirror.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: AGENTS.md  CI_GUIDE.md  COMPLEXITY_REFACTORING.md  DEV_GUIDE.md  ENV_FIXES.md  MIGRATION_PLAN.md  README.md  SECURITY_ANALYSIS.md
posts/: ai-isnt-stupid-your-setup-is-16cn.html  all-ive-learned-about-github-copilot-instructions-so-far-5bm7.html  build-it-better-real-world-ai-coding-with-github-copilot-1d47.html  calling-all-nodejs-wizards-what-would-you-add-to-the-ultimate-boilerplate-38aj.html  can-we-set-the-record-straight-ai-content-and-a-bit-of-sanity-1inj.html  codeck-presents-verdent-ai-they-wanted-opinions-i-have-plenty-5ccl.html  conversational-retrieval-when-chat-becomes-navigation-2gij.html  copilot-premium-requests-more-than-asked-exactly-what-you-need-8ph.html  demystifying-coding-agent-prompts-that-always-work-2on7.html  did-ai-erase-attribution-your-git-history-is-missing-a-co-author-1m2l.html  dont-judge-this-version-of-the-submission-but-it-was-driving-me-insane-that-i-didnt-have-time-to-56o6.html  everything-i-know-about-github-copilot-instructions-from-zero-to-onboarded-for-r.html  everything-i-know-about-github-copilot-instructions-from-zero-to-onboarded-for-real-4nb0.html  fact-checking-the-fear-behind-the-dark-side-of-ai-the-real-story-366p.html  fact-checking-the-fear-behind-the-dark-side-of-ai-the-real-story.html  find-the-dev-post-that-needs-you-now-33ng.html  forged-between-coal-and-code-phi.html  from-hell-loops-to-happy-commits-38c4.html  from-static-portfolio-to-indexed-decisions-46bf.html  github-coding-agent-the-magical-autonomous-ai-the-prequel-4h11.html  github-copilot-agent-mode-the-mistake-you-never-want-to-make-1mmh.html  github-copilot-agent-mode-the-mistake-you-never-want-to-make.html  github-copilot-chat-modes-explained-with-personality-2f4c.html  github-copilot-chat-modes-from-chaos-to-command-54k0.html  github-copilot-everything-you-wanted-to-know-about-reusable-and-experimental-pro.html  github-copilot-everything-you-wanted-to-know-about-reusable-and-experimental-prompts-part-1-iff.html  github-copilot-reusable-prompts-part-2-walkthrough-real-examples-17mh.html  github-copilot-reusable-prompts-part-2-walkthrough-real-examples.html  github-copilot-reusable-prompts-part-3-more-experiments-more-mayhem-552b.html  github-copilot-reusable-prompts-part-3-more-experiments-more-mayhem.html  guess-what-i-passed-the-pearson-vue-github-copilot-certification-exam.html  herding-cats-in-pajamas-teamwork-across-time-zones-242n.html  herding-cats-in-pajamas-teamwork-across-time-zones.html  how-i-blog-with-bots-but-you-can-still-blame-me-2861.html  how-i-blog-with-bots-but-you-can-still-blame-me.html  i-genuinely-meant-it-when-i-said-i-was-done-i-even-had-that-rare-fragile-sense-of-closure-then-i-1cna.html  i-stopped-reviewing-code-a-backend-devs-experiment-with-google-gemini-5424.html  is-github-copilot-safe-the-fun-and-hard-truth-about-responsible-ai-3b95.html  is-github-copilot-safe-the-fun-and-hard-truth-about-responsible-ai.html  (+28 more)
(+109 files in other folders)
