[project]
name = "devto-mirror"
version = "0.2.0"
description = "Static HTML mirror of Dev.to blog posts for better search engine discoverability"
authors = [
    {name = "Ashley Childress", email = "6563688+anchildress1@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "python-slugify>=8.0.1",
    "bleach>=6.0.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.6.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "pip-audit>=2.0.0",
    "flake8>=6.1.0",
    "gitlint>=0.16.0",
    "detect-secrets>=1.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "coverage>=7.0.0",
    "radon>=6.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["specs*", "assets*", "tests*", ".github*"]

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.bandit]
exclude_dirs = ["tests", ".venv", "htmlcov"]

[tool.coverage.run]
source = ["src", "scripts"]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
    ".venv/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
